#ifndef TRANSPORT_ICARGO_H
#define TRANSPORT_ICARGO_H


class ICargo {
    virtual void Loading() = 0;
    virtual void UnLoading() = 0;
};


#endif //TRANSPORT_ICARGO_H
